--- a/requirements.txt
+++ b/requirements.txt
@@ -1,153 +1,23 @@
-appnope==0.1.0
-APScheduler==3.6.0
-asn1crypto==0.22.0
-atomicwrites==1.3.0
-attrs==19.1.0
-Automat==0.6.0
-aws-requests-auth==0.4.2
-backports-abc==0.5
-backports.functools-lru-cache==1.5
-backports.shutil-get-terminal-size==1.0.0
-backports.weakref==1.0rc1
-beautifulsoup4==4.6.0
-bleach==1.5.0
-blist==1.3.6
-boto3==1.9.167
-botocore==1.12.167
-certifi==2017.11.5
-cffi==1.12.3
-chardet==3.0.4
+astroid==2.2.5
 Click==7.0
-configparser==3.5.0
-constantly==15.1.0
-contextlib2==0.5.5
-croniter==0.3.30
-cryptography==1.9
-cssselect==1.0.1
-cycler==0.10.0
-Cython==0.29.10
-DateTime==4.3
-decorator==4.1.2
-defusedxml==0.6.0
-docopt==0.6.2
-docutils==0.14
-elastalert==0.2.0b2
-elasticsearch==7.0.2
-entrypoints==0.2.3
-enum34==1.1.6
-envparse==0.2.0
-exotel==0.1.5
+colorama==0.4.1
 Flask==1.1.1
 Flask-Login==0.4.1
-Flask-SQLAlchemy==2.4.1
+Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
-funcsigs==1.0.2
-functools32==3.2.3.post2
-future==0.17.1
-futures==3.2.0
-html5lib==0.9999999
-hyperlink==17.2.1
-idna==2.5
-importlib-metadata==0.22
-incremental==17.5.0
-intelhex==2.2.1
-ipaddress==1.0.18
-ipykernel==4.7.0
-ipython==5.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.1.0
+gunicorn==19.9.0
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
-jira==1.0.14
-jmespath==0.9.4
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.1
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-jupyterlab==0.33.12
-jupyterlab-launcher==0.11.2
-kiwisolver==1.1.0
-lxml==3.8.0
-Markdown==2.6.8
-MarkupSafe==1.0
-matplotlib==2.2.4
-mistune==0.8.3
-mock==2.0.0
-more-itertools==5.0.0
-nbconvert==5.3.1
-nbformat==4.4.0
-notebook==5.2.2
-numpy==1.13.1
-oauthlib==3.0.1
-ordereddict==1.1
-packaging==19.1
-pandas==0.24.2
-pandocfilters==1.4.2
-parsel==1.2.0
-pathlib2==2.3.0
-pbr==3.1.1
-pexpect==4.3.1
-pickleshare==0.7.4
-pluggy==0.13.0
-prompt-toolkit==1.0.15
-protobuf==3.3.0
-ptyprocess==0.5.2
-py==1.8.0
-pyasn1==0.2.3
-pyasn1-modules==0.0.9
-pycparser==2.17
-PyDispatcher==2.0.5
-pygexf==0.2.2
-Pygments==2.2.0
-PyJWT==1.7.1
-pyOpenSSL==17.0.0
-pyparsing==2.4.2
-pyserial==3.4
-PyStaticConfiguration==0.10.4
-pytest==4.6.5
-pytest-pycharm==0.6.0
-python-dateutil==2.6.1
-python-logstash==0.4.6
-python-magic==0.4.15
-pytz==2019.1
-PyYAML==5.1.1
-pyzmq==16.0.3
-qtconsole==4.3.1
-queuelib==1.4.2
-requests==2.22.0
-requests-oauthlib==1.2.0
-requests-toolbelt==0.9.1
-rmate==1.0.3
-s3transfer==0.2.1
-scandir==1.6
-scikit-learn==0.18.2
-Scrapy==1.4.0
-service-identity==17.0.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.10.0
-sklearn==0.0
+lazy-object-proxy==1.4.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+pylint==2.3.1
+PyQt5==5.13.0
+PyQt5-sip==4.19.18
+six==1.12.0
 SQLAlchemy==1.3.8
-stomp.py==4.1.22
-subprocess32==3.5.4
-tensorflow==1.2.1
-terminado==0.8.1
-testpath==0.3.1
-texttable==1.6.1
-thehive4py==1.6.0
-tornado==4.5.3
-traitlets==4.3.2
-twilio==6.0.0
-Twisted==17.5.0
-tzlocal==1.5.1
-urllib3==1.25.3
-virtualenv==15.1.0
-w3lib==1.17.0
-wcwidth==0.1.7
-webencodings==0.5.1
+typed-ast==1.4.0
 Werkzeug==0.15.6
-widgetsnbextension==3.1.0
+wrapt==1.11.2
 WTForms==2.2.1
-zipp==0.6.0
-zope.interface==4.4.2
