--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,14 @@
-astroid==2.2.5
+blinker==1.4
 Click==7.0
-colorama==0.4.1
 Flask==1.1.1
 Flask-Login==0.4.1
-Flask-SQLAlchemy==2.4.0
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
-gunicorn==19.9.0
-isort==4.3.21
+gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.4.2
+Jinja2==2.10.3
 MarkupSafe==1.1.1
-mccabe==0.6.1
-pylint==2.3.1
-PyQt5==5.13.0
-PyQt5-sip==4.19.18
-six==1.12.0
-SQLAlchemy==1.3.8
-typed-ast==1.4.0
-Werkzeug==0.15.6
-wrapt==1.11.2
+SQLAlchemy==1.3.11
+Werkzeug==0.16.0
 WTForms==2.2.1
